# hordoc-bot

./: .env.sample  .flake8  .gitignore  DESIGN.md  Justfile  Pipfile  README.md  bot.py  data.py  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: test.yml
embeddings/: embeddings_search.py  find_closest_with_embeddings.py  rephrased.json  scripts.py
embeddings/prompts/: rephrase_question.txt
hordoc/: bot.py  cli.py  data.py
hordoc/cogs/: questions.py  scraper.py  sync.py
hordoc/embeddings/: answers.json  embeddings.json  embeddings_search.py  heuristics.py  rephrased.json  scripts.py
hordoc/embeddings/prompts/: formulate_answer.txt
hordoc/views/: AnswerView.py
tests/: test_data.py
tests/embeddings/: test_embeddings_search.py
views/: AnswerView.py
