[project]
name = "hordoc"
description = "the hordoc bot"
version = "0.1.0"
dynamic = ["dependencies"]

[project.optional-dependencies]
test = [
  'pytest',
]
flake8 = [
  'black',
  'flake8',
]
mypy = [
  'mypy',
  'types-requests',
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["hordoc"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
